@@ -2,30 +2,43 @@ package com.kbseed.service;
 
 import com.kbseed.dto.ClientDTO;
 import com.kbseed.entity.ClientEntity;
+import com.kbseed.entity.ClientMembershipEntity;
+import com.kbseed.entity.MembershipPlanEntity;
+import com.kbseed.repository.ClientMembershipRepository;
 import com.kbseed.repository.ClientRepository;
+import com.kbseed.repository.MembershipPlanRepository;
+import com.kbseed.support.SessionContext;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ClientService {
-
     private final ClientRepository clientRepository;
+    private final ClientMembershipRepository clientMembershipRepository;
+    private final MembershipPlanRepository membershipPlanRepository;
+    private final SessionContext sessionContext;
 
-    public ClientService(ClientRepository clientRepository) {
+    public ClientService(ClientRepository clientRepository,
+                         ClientMembershipRepository clientMembershipRepository,
+                         MembershipPlanRepository membershipPlanRepository,
+                         SessionContext sessionContext) {
         this.clientRepository = clientRepository;
+        this.clientMembershipRepository = clientMembershipRepository;
+        this.membershipPlanRepository = membershipPlanRepository;
+        this.sessionContext = sessionContext;
     }
 
     public List<ClientDTO> obtenerTodos() {
-        return clientRepository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        Long studioId = sessionContext.requireStudioId();
+        return clientRepository.findByStudioIdOrderByFirstNameAscLastNameAsc(studioId).stream().map(this::toDTO).toList();
     }
 
     public ClientDTO obtenerPorId(Long id) {
+        Long studioId = sessionContext.requireStudioId();
         ClientEntity entity = clientRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Alumno no encontrado con id: " + id));
         return toDTO(entity);
     }
@@ -33,18 +46,16 @@ public class ClientService {
     public ClientDTO crear(ClientDTO dto) {
         ClientEntity entity = toEntity(dto);
         entity.setId(null);
-        if (entity.getStatus() == null || entity.getStatus().isBlank()) {
-            entity.setStatus("ACTIVE");
-        }
-        ClientEntity saved = clientRepository.save(entity);
-        return toDTO(saved);
+        entity.setStudioId(sessionContext.requireStudioId());
+        if (entity.getStatus() == null || entity.getStatus().isBlank()) entity.setStatus("ACTIVO");
+        return toDTO(clientRepository.save(entity));
     }
 
     public ClientDTO actualizar(Long id, ClientDTO dto) {
+        Long studioId = sessionContext.requireStudioId();
         ClientEntity entity = clientRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Alumno no encontrado con id: " + id));
-
-        entity.setStudioId(dto.getStudioId());
         entity.setUserId(dto.getUserId());
         entity.setFirstName(dto.getFirstName());
         entity.setLastName(dto.getLastName());
@@ -55,13 +66,13 @@ public class ClientService {
         entity.setEmergencyContactPhone(dto.getEmergencyContactPhone());
         entity.setNotes(dto.getNotes());
         entity.setStatus(dto.getStatus());
-
-        ClientEntity updated = clientRepository.save(entity);
-        return toDTO(updated);
+        return toDTO(clientRepository.save(entity));
     }
 
     public void eliminar(Long id) {
+        Long studioId = sessionContext.requireStudioId();
         ClientEntity entity = clientRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Alumno no encontrado con id: " + id));
         clientRepository.delete(entity);
     }
@@ -80,6 +91,14 @@ public class ClientService {
         dto.setEmergencyContactPhone(entity.getEmergencyContactPhone());
         dto.setNotes(entity.getNotes());
         dto.setStatus(entity.getStatus());
+
+        ClientMembershipEntity membership = clientMembershipRepository.findTopByClientIdOrderByEndDateDesc(entity.getId()).orElse(null);
+        if (membership != null) {
+            dto.setMembershipStatus(membership.getEndDate().isBefore(LocalDate.now()) ? "VENCIDA" : membership.getStatus());
+            dto.setMembershipEndDate(membership.getEndDate());
+            MembershipPlanEntity plan = membershipPlanRepository.findById(membership.getMembershipPlanId()).orElse(null);
+            dto.setMembershipPlanName(plan != null ? plan.getName() : null);
+        }
         return dto;
     }
 
