@@ -3,36 +3,30 @@ package com.kbseed.service;
 import com.kbseed.dto.RoomDTO;
 import com.kbseed.entity.RoomEntity;
 import com.kbseed.repository.RoomRepository;
+import com.kbseed.support.SessionContext;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoomService {
-
     private final RoomRepository roomRepository;
+    private final SessionContext sessionContext;
 
-    public RoomService(RoomRepository roomRepository) {
+    public RoomService(RoomRepository roomRepository, SessionContext sessionContext) {
         this.roomRepository = roomRepository;
+        this.sessionContext = sessionContext;
     }
 
     public List<RoomDTO> obtenerTodos() {
-        return roomRepository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    public List<RoomDTO> obtenerPorStudioId(Long studioId) {
-        return roomRepository.findByStudioId(studioId)
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        Long studioId = sessionContext.requireStudioId();
+        return roomRepository.findByStudioId(studioId).stream().map(this::toDTO).toList();
     }
 
     public RoomDTO obtenerPorId(Long id) {
+        Long studioId = sessionContext.requireStudioId();
         RoomEntity entity = roomRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Salón no encontrado con id: " + id));
         return toDTO(entity);
     }
@@ -40,33 +34,30 @@ public class RoomService {
     public RoomDTO crear(RoomDTO dto) {
         RoomEntity entity = toEntity(dto);
         entity.setId(null);
-
-        if (entity.getIsActive() == null) {
-            entity.setIsActive(true);
-        }
-
-        RoomEntity saved = roomRepository.save(entity);
-        return toDTO(saved);
+        entity.setStudioId(sessionContext.requireStudioId());
+        if (entity.getIsActive() == null) entity.setIsActive(true);
+        if (entity.getRoomType() == null || entity.getRoomType().isBlank()) entity.setRoomType("SALON");
+        return toDTO(roomRepository.save(entity));
     }
 
     public RoomDTO actualizar(Long id, RoomDTO dto) {
+        Long studioId = sessionContext.requireStudioId();
         RoomEntity entity = roomRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Salón no encontrado con id: " + id));
-
-        entity.setStudioId(dto.getStudioId());
         entity.setName(dto.getName());
         entity.setCapacity(dto.getCapacity());
         entity.setLocationNote(dto.getLocationNote());
+        entity.setRoomType(dto.getRoomType() == null || dto.getRoomType().isBlank() ? "SALON" : dto.getRoomType());
         entity.setIsActive(dto.getIsActive());
-
-        RoomEntity updated = roomRepository.save(entity);
-        return toDTO(updated);
+        return toDTO(roomRepository.save(entity));
     }
 
     public void eliminar(Long id) {
+        Long studioId = sessionContext.requireStudioId();
         RoomEntity entity = roomRepository.findById(id)
+                .filter(item -> item.getStudioId().equals(studioId))
                 .orElseThrow(() -> new RuntimeException("Salón no encontrado con id: " + id));
-
         roomRepository.delete(entity);
     }
 
@@ -77,6 +68,7 @@ public class RoomService {
         dto.setName(entity.getName());
         dto.setCapacity(entity.getCapacity());
         dto.setLocationNote(entity.getLocationNote());
+        dto.setRoomType(entity.getRoomType());
         dto.setIsActive(entity.getIsActive());
         return dto;
     }
@@ -88,6 +80,7 @@ public class RoomService {
         entity.setName(dto.getName());
         entity.setCapacity(dto.getCapacity());
         entity.setLocationNote(dto.getLocationNote());
+        entity.setRoomType(dto.getRoomType());
         entity.setIsActive(dto.getIsActive());
         return entity;
     }
